-issue#5184: Cacti permission checks generate SQL errors is the user has been deleted
-issue#5185: Repair Database does not prune old Poller Item Records
-issue#5187: Getting SQL errors in the Cacti due to plugin calling register function in wrong location
-issue#5188: Device Template Filter broken
-issue#5190: When using Gradient Support GPRINT Text Format is misaligned
-issue#5195: Spikekill Backtrace Argument #1 ($string) must be passed by reference, value given
-issue#5196: Gradient support breaks certain Graphs with special characters in them
-issue#5197: Realtime graph on remote poller not working in 1.2.23
-issue#5198: PHP Diff Renderer throws warnings
-issue#5199: Failures to call fgets generate errors in the Cacti.log
-issue#5200: Cacti function throws errors when attempting to render classic images in PHP8 
-issue#5201: Minor issues in modern and dark prevent weathermaps from rendering correctly
-issue#5202: Importing package with Graph Size does not update the Graph Templates
-issue#5203: Scripts ss_net_snmp_device_io.php and ss_net_snmp_device_bytes.php break when using HMIB plugin and PHP8.1
-issue#5204: Audit Database throws error during runtime on PHP8
-issue#5205: Cacti CSS file for Diff.css does look correct in all Cacti Themes
-issue#5207: Deprecated error message during installation routine
-issue#5208: Package form objects use the wrong text domain in their i18n strings
-issue#5209: Add account disable log message for disabled users attempting to login
-issue#5211: Undefined variable $user_id when creating new graph
-issue#5223: Drop callback function sometimes puts name in the form input instead of the id
-issue#5224: When poller run is exceeded by only a short period of time, Cacti does not round the number in the error
-issue#5227: Data Source Debug throws and error when the Debug runs before the RRDfile is created

1.2.23
-security#4920: Add .htaccess file to scripts folder